<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/pilihGenger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/pilihMale"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="Laki-Laki"
            android:textColor="@drawable/radio_flat_text_selector"/>
        <RadioButton
            android:id="@+id/pilihFemale"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="Perempuan"
            android:textColor="@drawable/radio_flat_text_selector"/>
     </RadioGroup>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:text="@string/label_berat"
            android:textColor="#FF6200EE"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/label_tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="224dp"
        android:gravity="center_horizontal"
        android:text="@string/height"
        android:textColor="#FF6200EE"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/label_usia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="372dp"
        android:gravity="center_horizontal"
        android:text="@string/label_usia"
        android:textColor="#FF6200EE"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/kurangBerat"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="152dp"
        android:onClick="krgBerat"
        android:text="@string/logo_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/input_Berat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/kurangBerat"
        app:layout_constraintTop_toTopOf="@+id/kurangBerat"
        app:layout_constraintBottom_toBottomOf="@+id/kurangBerat"
        app:layout_constraintVertical_bias="0.595" />
    <Button
        android:id="@+id/tambahBerat"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="152dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbBerat"
        android:text="@string/Logo_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/KurangTinggi"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="296dp"
        android:onClick="krgTinggi"
        android:text="@string/logo_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/input_Tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/KurangTinggi"
        app:layout_constraintTop_toTopOf="@+id/KurangTinggi"
        app:layout_constraintBottom_toBottomOf="@+id/KurangTinggi"
        app:layout_constraintVertical_bias="0.595" />
    <Button
        android:id="@+id/tambahTinggi"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="296dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbTinggi"
        android:text="@string/Logo_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/tambahUsia"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="424dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbUsia"
        android:text="@string/Logo_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/input_Usia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/kurangUsia"
        app:layout_constraintTop_toTopOf="@+id/kurangUsia"
        app:layout_constraintBottom_toBottomOf="@+id/kurangUsia"
        app:layout_constraintVertical_bias="0.595" />
    <Button
        android:id="@+id/kurangUsia"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="424dp"
        android:layout_marginLeft="64dp"
        android:onClick="krgUsia"
        android:text="@string/logo_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calc"
        android:layout_width="127dp"
        android:layout_height="39dp"
        android:onClick="calculatorBMI"
        android:text="Hitung BMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_Usia"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>